# bricksvg

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  TODO.md  ldr2png_svg.py  ldr2svg.py  pyproject.toml  test.ldr  test_projection.py
.github/workflows/: ci.yml
ldr2svg/: compose.py  diagram2svg.py  diagram_bridge.py  diagram_compose.py  grid.py  ldr2png_svg.py  mermaid2svg.py  mermaid_bridge.py  part_map_data.py  parts.py  pipeline.py  projection.py  scad.py  svg2pptx.py
scripts/: diagram2svg.py  mermaid2svg.py  plot_png_size.py  projection_test.py
test/: example_diagram.mmd  example_diagram.py  test_compose.py  test_diagram_bridge.py  test_diagram_compose.py  test_grid.py  test_ldr2png_svg.py  test_mermaid_bridge.py  test_parts.py  test_projection.py  test_scad.py  test_svg2pptx.py  test_units.py
tools/: build_part_map.py
