[project]
name = "ldr2svg"
version = "0.1.0"
description = "Render LDraw/.ldr scenes and diagrams-library scripts to isometric brick SVGs"
requires-python = ">=3.10"
# System dependencies (not installable via pip):
#   openscad  — renders brick piece images (required for build_pngs / slow tests)
#   graphviz  — lays out diagrams-library graphs via the 'dot' engine
#   xvfb      — virtual display for headless OpenSCAD rendering (Linux only)
dependencies = [
    "diagrams>=0.25.1",
    "numpy>=2.2.6",
    "pillow>=12.1.1",
    "python-pptx>=1.0.2",
    "svgwrite>=1.4.3",
]

[project.scripts]
ldr2svg     = "ldr2svg.ldr2png_svg:main"
diagram2svg = "ldr2svg.diagram2svg:main"
mermaid2svg = "ldr2svg.mermaid2svg:main"
svg2pptx    = "ldr2svg.svg2pptx:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[tool.ty.src]
exclude = [
    "scripts/",
    "test/example_diagram.py",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
markers = ["slow: requires OpenSCAD + Xvfb system dependencies (deselect with -m 'not slow')"]
